syntax = "proto3";

package highschool.v1;

option go_package = "github.com/highschool/backend/gen/highschool/v1;highschoolv1";

import "highschool/v1/district.proto";
import "highschool/v1/school.proto";

// 参考数据服务
service ReferenceService {
  // 获取区县列表
  rpc GetDistricts(GetDistrictsRequest) returns (GetDistrictsResponse);

  // 获取初中学校列表
  rpc GetMiddleSchools(GetMiddleSchoolsRequest) returns (GetMiddleSchoolsResponse);

  // 获取高中学校列表
  rpc GetSchools(GetSchoolsRequest) returns (GetSchoolsResponse);

  // 获取学校详情
  rpc GetSchoolDetail(GetSchoolDetailRequest) returns (GetSchoolDetailResponse);

  // 获取历年分数线
  rpc GetHistoryScores(GetHistoryScoresRequest) returns (GetHistoryScoresResponse);

  // 获取各区中考人数
  rpc GetDistrictExamCount(GetDistrictExamCountRequest) returns (GetDistrictExamCountResponse);

  // 获取有名额分配到区的高中列表（按学生所在区过滤）
  rpc GetSchoolsWithQuotaDistrict(GetSchoolsWithQuotaDistrictRequest) returns (GetSchoolsWithQuotaDistrictResponse);

  // 获取有名额分配到校的高中列表（按学生初中过滤）
  rpc GetSchoolsWithQuotaSchool(GetSchoolsWithQuotaSchoolRequest) returns (GetSchoolsWithQuotaSchoolResponse);

  // 获取统一招生（1-15志愿）可选学校列表（本区学校 + 面向全市招生的学校）
  rpc GetSchoolsForUnified(GetSchoolsForUnifiedRequest) returns (GetSchoolsForUnifiedResponse);
}

// 获取区县列表请求
message GetDistrictsRequest {}

// 获取区县列表响应
message GetDistrictsResponse {
  repeated District districts = 1;
}

// 获取初中学校列表请求
message GetMiddleSchoolsRequest {
  optional int32 district_id = 1;
}

// 获取初中学校列表响应
message GetMiddleSchoolsResponse {
  repeated MiddleSchool middle_schools = 1;
}

// 获取高中学校列表请求
message GetSchoolsRequest {
  optional int32 district_id = 1;
  optional string school_type_id = 2;
  optional string school_nature_id = 3;
  optional bool has_international_course = 4;
  optional string keyword = 5;
  int32 page = 6;
  int32 page_size = 7;
}

// 获取高中学校列表响应
message GetSchoolsResponse {
  repeated School schools = 1;
  PaginationMeta meta = 2;
}

// 获取学校详情请求
message GetSchoolDetailRequest {
  int32 id = 1;
}

// 获取学校详情响应
message GetSchoolDetailResponse {
  SchoolDetail school = 1;
}

// 获取历年分数线请求
message GetHistoryScoresRequest {
  optional int32 district_id = 1;
  optional int32 school_id = 2;
  optional int32 year = 3;
}

// 获取历年分数线响应
message GetHistoryScoresResponse {
  repeated HistoryScore scores = 1;
}

// 获取各区中考人数请求
message GetDistrictExamCountRequest {
  int32 year = 1;
}

// 获取各区中考人数项
message DistrictExamCountItem {
  int32 district_id = 1;
  string district_name = 2;
  int32 exam_count = 3;
}

// 获取各区中考人数响应
message GetDistrictExamCountResponse {
  int32 year = 1;
  repeated DistrictExamCountItem districts = 2;
}

// 获取有名额分配到区的高中列表请求
message GetSchoolsWithQuotaDistrictRequest {
  int32 district_id = 1;  // 学生所在区
  int32 year = 2;         // 年份
}

// 获取有名额分配到区的高中列表响应
message GetSchoolsWithQuotaDistrictResponse {
  repeated SchoolWithQuota schools = 1;
}

// 获取有名额分配到校的高中列表请求
message GetSchoolsWithQuotaSchoolRequest {
  int32 middle_school_id = 1;  // 学生所在初中
  int32 year = 2;               // 年份
}

// 获取有名额分配到校的高中列表响应
message GetSchoolsWithQuotaSchoolResponse {
  repeated SchoolWithQuota schools = 1;
}

// 获取统一招生（1-15志愿）可选学校列表请求
message GetSchoolsForUnifiedRequest {
  int32 district_id = 1;  // 学生所在区
  int32 year = 2;         // 年份
}

// 获取统一招生（1-15志愿）可选学校列表响应
message GetSchoolsForUnifiedResponse {
  repeated SchoolForUnified schools = 1;
}

// 统一招生学校信息
message SchoolForUnified {
  int32 id = 1;
  string full_name = 2;
  string code = 3;
  bool is_district_school = 4;  // 是否为本区学校（vs 面向全市招生的学校）
}

// 带名额信息的学校
message SchoolWithQuota {
  int32 id = 1;
  string full_name = 2;
  string code = 3;
  int32 quota_count = 4;  // 名额数量
}
